* put neutral player color in map.properties

Change for 0.5.2.2

* fixed Dont play button on client screen. (sgb)

* threading fixes. (sgb)

Changes for 0.5.2

* add switch in map.properties to disable scrolling map around the edges (sgb)
 
* added scripted random for debugging (sgb)

* added new map by WanderingHead (wandering head)

* add confirmation prompt when exiting the game (sgb)

* jdk 1.4 - 1.5 compatability (sgb)

* Add has relief property to map.properties (sgb)

* Add default unit scroll size to map.properties (sgb)

* Changes to make TripleA compile under Sun JDK 1.5.x (George_H)

* Added better unix shell scripts for TripleA, thanks DMan for the scripts (George_H)

* Added better path search so TripleA can run from any directory (sgb)

* Now all map utils have proper "save as" dialogs (George_H)

* Added new class to prompt user to select a directory so map utils won't save files to a hardcoded dir (George_H)

* Define player colour in map.properties to allow easy modification and adding new players (sgb)

* Added option to limit ipcs lost in a territory during one round. This is necessary to implement LHTR ruleset. (Ali Ibrahim)

* Fixed bug in Irony PBEM random source: It did not use the max parameter passed to the random methods. This fixes the 4th edition AA casualty selection problem in PBEM. (Ali Ibrahim)

* Added new technology activation delegate to allow control of when technologies actually take effect. This is used to allow delay of technology activation in LHTR. (Ali Ibrahim)

* Changed mouse behavior such that only the left button is used to select a territory to put units in. (Ali Ibrahim)

* Added more options for unit size using submenu. (Ali Ibrahim)

* Changed ordering of properties in the launcher properties tab to use ordering in game XML file. (Ali Ibrahim)
